# AIRGateway

./: .gitignore  Cargo.toml  DEEPSEEK_PLAN.md  Dockerfile  README.md  rustai.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  middleware.rs  traits.rs  types.rs
crates/k8s-gateway/: Cargo.toml
crates/k8s-gateway/src/: controller.rs  crd.rs  lib.rs  watcher.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs  transport.rs
crates/observability/: Cargo.toml
crates/observability/src/: logging.rs  metrics.rs  tracing.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: connection.rs  engine.rs  lib.rs  sse.rs  tls.rs  transport.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  middleware.rs  provider.rs  proxy_handler.rs  router.rs
crates/wasm-plugin/: Cargo.toml
crates/wasm-plugin/src/: engine.rs  lib.rs  plugins.rs  runtime.rs  types.rs
kubernetes/: deployment.yaml  gateway.yaml
src/: main.rs
