[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/proxy",
    "crates/router",
    "crates/mcp",
    "crates/wasm-plugin",
    "crates/k8s-gateway",
    "crates/observability",
]

[package]
name = "rustai"
version = "0.1.0"
edition = "2021"
description = "Cloud-native AI Gateway and Reverse Proxy engine in Rust"

[dependencies]
rustai-core = { path = "crates/core" }
rustai-proxy = { path = "crates/proxy" }
rustai-router = { path = "crates/router" }
rustai-mcp = { path = "crates/mcp" }
rustai-wasm-plugin = { path = "crates/wasm-plugin" }
rustai-k8s-gateway = { path = "crates/k8s-gateway" }
rustai-observability = { path = "crates/observability" }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cloud-native AI Gateway and Reverse Proxy engine in Rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# HTTP / Proxy
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = { version = "0.13", features = ["process"] }

# WebAssembly
wasmtime = "24.0"
wasmtime-wasi = "24.0"

# Kubernetes
k8s-openapi = { version = "0.22", features = ["v1_30"] }
kube = { version = "0.93", features = ["runtime", "derive", "ws"] }
schemars = "0.8"

# MCP (Model Context Protocol)
uuid = { version = "1", features = ["v4", "serde"] }

# General
anyhow = "1"
thiserror = "2"
dashmap = "6"
futures = "0.3"
bytes = "1"
parking_lot = "0.12"
tls-listener = "0.10"
rustls = "0.23"
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
url = { version = "2", features = ["serde"] }
base64 = "0.22"
