[package]
name = "rustai-core"
version = "0.1.0"
edition = "2021"
description = "Core types, traits, and configuration for RustAI Gateway"

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
