[package]
name = "rustai-router"
version = "0.1.0"
edition = "2021"
description = "Extensible middleware-based router with Axum and Tower for AI Gateway"

[dependencies]
rustai-core = { path = "../core" }
rustai-proxy = { path = "../proxy" }

async-trait = "0.1"
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pin-project = "1"
