[package]
name = "rustai-wasm-plugin"
version = "0.1.0"
edition = "2021"
description = "Sandboxed WebAssembly runtime extension layer using Wasmtime"

[dependencies]
rustai-core = { path = "../core" }

async-trait = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
regex = "1"
